--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
+language: java
+
 os:
   - linux
   - osx
-language: java
+
+before_install:
+   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export JAVA_HOME=$(/usr/libexec/java_home); fi
+   - echo $JAVA_HOME
 
