--- a/uk.co.matbooth.anemometry.serial.macosx.x86_64/pom.xml
+++ b/uk.co.matbooth.anemometry.serial.macosx.x86_64/pom.xml
@@ -12,9 +12,8 @@
 
   <properties>
     <cflags>-O2 -g -pipe -Wall -fPIC -Werror=format-security
-      -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector-strong
-      --param=ssp-buffer-size=4 -grecord-gcc-switches -m64
-      -mtune=generic</cflags>
+      -Wp,-D_FORTIFY_SOURCE=2 -fexceptions --param=ssp-buffer-size=4
+      -m64 -mtune=generic</cflags>
     <ldflags>-m64 -shared</ldflags>
   </properties>
 
