--- a/uk.co.matbooth.anemometry.serial.linux.x86_64/pom.xml
+++ b/uk.co.matbooth.anemometry.serial.linux.x86_64/pom.xml
@@ -40,51 +40,54 @@
           </environments>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>native-maven-plugin</artifactId>
-        <configuration>
-          <javahOutputFileName>SerialPort.h</javahOutputFileName>
-          <javahClassNames>
-            <javahClassName>uk.co.matbooth.anemometry.serial.SerialPort</javahClassName>
-          </javahClassNames>
-          <javahOS>linux</javahOS>
-          <sources>
-            <source>
-              <directory>../uk.co.matbooth.anemometry.serial/native</directory>
-              <fileNames>
-                <fileName>SerialPort.c</fileName>
-              </fileNames>
-            </source>
-          </sources>
-          <compilerExecutable>gcc</compilerExecutable>
-          <compilerStartOptions>
-            <compilerStartOption>${cflags}</compilerStartOption>
-          </compilerStartOptions>
-          <linkerExecutable>gcc</linkerExecutable>
-          <linkerStartOptions>
-            <linkerStartOption>${ldflags}</linkerStartOption>
-          </linkerStartOptions>
-          <linkerFinalName>libserial</linkerFinalName>
-          <linkerFinalNameExt>so</linkerFinalNameExt>
-          <linkerOutputDirectory>os/linux/x86_64</linkerOutputDirectory>
-          <workingDirectory>${project.basedir}</workingDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>os/linux/x86_64</directory>
-              <includes>
-                <include>*.so</include>
-              </includes>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>linux.x86_64</id>
+      <activation>
+        <os>
+          <family>Linux</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <configuration>
+              <javahOutputFileName>SerialPort.h</javahOutputFileName>
+              <javahClassNames>
+                <javahClassName>uk.co.matbooth.anemometry.serial.SerialPort</javahClassName>
+              </javahClassNames>
+              <javahOS>linux</javahOS>
+              <sources>
+                <source>
+                  <directory>../uk.co.matbooth.anemometry.serial/native</directory>
+                  <fileNames>
+                    <fileName>SerialPort.c</fileName>
+                  </fileNames>
+                </source>
+              </sources>
+              <compilerExecutable>gcc</compilerExecutable>
+              <compilerStartOptions>
+                <compilerStartOption>${cflags}</compilerStartOption>
+              </compilerStartOptions>
+              <linkerExecutable>gcc</linkerExecutable>
+              <linkerStartOptions>
+                <linkerStartOption>${ldflags}</linkerStartOption>
+              </linkerStartOptions>
+              <linkerFinalName>libserial</linkerFinalName>
+              <linkerFinalNameExt>so</linkerFinalNameExt>
+              <linkerOutputDirectory>os/linux/x86_64</linkerOutputDirectory>
+              <workingDirectory>${project.basedir}</workingDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
