--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,17 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Anemometry Parent</name>
+  <name>Anemometry</name>
+  <description>Anemoscope and anemograph for InSpeed anemometers.</description>
+  <url>https://github.com/mbooth101/anemometry</url>
+  <inceptionYear>2015</inceptionYear>
+  <licenses>
+    <license>
+      <name>Eclipse Public License, Version 1.0</name>
+      <url>http://www.eclipse.org/legal/epl-v10.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <prerequisites>
     <maven>3.1.1</maven>
