--- a/uk.co.matbooth.anemometry.serial.linux.arm/pom.xml
+++ b/uk.co.matbooth.anemometry.serial.linux.arm/pom.xml
@@ -11,7 +11,7 @@
   <packaging>eclipse-plugin</packaging>
 
   <properties>
-    <cflags>-O2 -g -pipe -Wall -Werror=format-security
+    <cflags>-O2 -g -pipe -Wall -fPIC -Werror=format-security
       -Wp,-D_FORTIFY_SOURCE=2 -fexceptions --param=ssp-buffer-size=4
       -march=armv7-a -mfpu=vfpv3-d16 -mfloat-abi=hard</cflags>
     <ldflags>-shared</ldflags>
